// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hint 1`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 bfFPpw"
  tabindex="0"
>
  <svg
    class="Hintstyles__Icon-sc-1is9tx-2 ePNuAG"
    fill="none"
    height="18"
    tabindex="1"
    viewBox="0 0 18 18"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 0C13.9706 0 18 4.02944 18 9C18 13.9706 13.9706 18 9 18C4.02944 18 0 13.9706 0 9C0 4.02944 4.02944 0 9 0ZM9 7.2H7.2V9H8.1V11.7H6.3V13.5H11.7V11.7H9.9V8.1C9.9 7.60294 9.49706 7.2 9 7.2ZM9 3.6C8.25441 3.6 7.65 4.20442 7.65 4.95C7.65 5.69558 8.25441 6.3 9 6.3C9.74558 6.3 10.35 5.69558 10.35 4.95C10.35 4.20442 9.74558 3.6 9 3.6Z"
      fill="currentcolor"
    />
  </svg>
  <div
    class="Popoverstyles__Message-wdclke-1 ckagnX"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Header-wdclke-2 fYngzS"
    >
      This is header
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    >
      Ut ut dui non ipsum pharetra aliquam id in libero. Aenean placerat leo nec ex pharetra finibus. Nunc id turpis eu risus rhoncus cursus quis efficitur sapien. Donec vitae arcu at lectus placerat fringilla.
    </div>
  </div>
</span>
`;

exports[`Hint w/ any props 1`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 bfFPpw"
  id="id"
  tabindex="0"
  title="title"
>
  <svg
    class="Hintstyles__Icon-sc-1is9tx-2 ePNuAG"
    fill="none"
    height="18"
    tabindex="1"
    viewBox="0 0 18 18"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 0C13.9706 0 18 4.02944 18 9C18 13.9706 13.9706 18 9 18C4.02944 18 0 13.9706 0 9C0 4.02944 4.02944 0 9 0ZM9 7.2H7.2V9H8.1V11.7H6.3V13.5H11.7V11.7H9.9V8.1C9.9 7.60294 9.49706 7.2 9 7.2ZM9 3.6C8.25441 3.6 7.65 4.20442 7.65 4.95C7.65 5.69558 8.25441 6.3 9 6.3C9.74558 6.3 10.35 5.69558 10.35 4.95C10.35 4.20442 9.74558 3.6 9 3.6Z"
      fill="currentcolor"
    />
  </svg>
  <div
    class="Popoverstyles__Message-wdclke-1 cWyuyv"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    />
  </div>
</span>
`;

exports[`Hint w/ design 1`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 bfFPpw"
  tabindex="0"
>
  <svg
    class="Hintstyles__Icon-sc-1is9tx-2 ePNuAG"
    fill="none"
    height="18"
    tabindex="1"
    viewBox="0 0 18 18"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 0C13.9706 0 18 4.02944 18 9C18 13.9706 13.9706 18 9 18C4.02944 18 0 13.9706 0 9C0 4.02944 4.02944 0 9 0ZM9 7.2H7.2V9H8.1V11.7H6.3V13.5H11.7V11.7H9.9V8.1C9.9 7.60294 9.49706 7.2 9 7.2ZM9 3.6C8.25441 3.6 7.65 4.20442 7.65 4.95C7.65 5.69558 8.25441 6.3 9 6.3C9.74558 6.3 10.35 5.69558 10.35 4.95C10.35 4.20442 9.74558 3.6 9 3.6Z"
      fill="currentcolor"
    />
  </svg>
  <div
    class="Popoverstyles__Message-wdclke-1 ckagnX"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Header-wdclke-2 fYngzS"
    >
      This is header
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    >
      Ut ut dui non ipsum pharetra aliquam id in libero. Aenean placerat leo nec ex pharetra finibus. Nunc id turpis eu risus rhoncus cursus quis efficitur sapien. Donec vitae arcu at lectus placerat fringilla.
    </div>
  </div>
</span>
`;

exports[`Hint w/ design 2`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 bfFPpw"
  tabindex="0"
>
  <svg
    class="Hintstyles__Icon-sc-1is9tx-2 ePNuAG"
    fill="none"
    height="18"
    tabindex="1"
    viewBox="0 0 18 18"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 0C13.9706 0 18 4.02944 18 9C18 13.9706 13.9706 18 9 18C4.02944 18 0 13.9706 0 9C0 4.02944 4.02944 0 9 0ZM9 7.2H7.2V9H8.1V11.7H6.3V13.5H11.7V11.7H9.9V8.1C9.9 7.60294 9.49706 7.2 9 7.2ZM9 3.6C8.25441 3.6 7.65 4.20442 7.65 4.95C7.65 5.69558 8.25441 6.3 9 6.3C9.74558 6.3 10.35 5.69558 10.35 4.95C10.35 4.20442 9.74558 3.6 9 3.6Z"
      fill="currentcolor"
    />
  </svg>
  <div
    class="Popoverstyles__Message-wdclke-1 cWyuyv"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Header-wdclke-2 fYngzS"
    >
      This is header
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    >
      Ut ut dui non ipsum pharetra aliquam id in libero. Aenean placerat leo nec ex pharetra finibus. Nunc id turpis eu risus rhoncus cursus quis efficitur sapien. Donec vitae arcu at lectus placerat fringilla.
    </div>
  </div>
</span>
`;

exports[`Hint w/ size 1`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 bfFPpw"
  tabindex="0"
>
  <svg
    class="Hintstyles__Icon-sc-1is9tx-2 jNhLPe"
    fill="none"
    height="18"
    tabindex="1"
    viewBox="0 0 18 18"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 0C13.9706 0 18 4.02944 18 9C18 13.9706 13.9706 18 9 18C4.02944 18 0 13.9706 0 9C0 4.02944 4.02944 0 9 0ZM9 7.2H7.2V9H8.1V11.7H6.3V13.5H11.7V11.7H9.9V8.1C9.9 7.60294 9.49706 7.2 9 7.2ZM9 3.6C8.25441 3.6 7.65 4.20442 7.65 4.95C7.65 5.69558 8.25441 6.3 9 6.3C9.74558 6.3 10.35 5.69558 10.35 4.95C10.35 4.20442 9.74558 3.6 9 3.6Z"
      fill="currentcolor"
    />
  </svg>
  <div
    class="Popoverstyles__Message-wdclke-1 cWyuyv"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Header-wdclke-2 fYngzS"
    >
      This is header
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    >
      Ut ut dui non ipsum pharetra aliquam id in libero. Aenean placerat leo nec ex pharetra finibus. Nunc id turpis eu risus rhoncus cursus quis efficitur sapien. Donec vitae arcu at lectus placerat fringilla.
    </div>
  </div>
</span>
`;

exports[`Hint w/ size 2`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 bfFPpw"
  tabindex="0"
>
  <svg
    class="Hintstyles__Icon-sc-1is9tx-2 ePNuAG"
    fill="none"
    height="18"
    tabindex="1"
    viewBox="0 0 18 18"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 0C13.9706 0 18 4.02944 18 9C18 13.9706 13.9706 18 9 18C4.02944 18 0 13.9706 0 9C0 4.02944 4.02944 0 9 0ZM9 7.2H7.2V9H8.1V11.7H6.3V13.5H11.7V11.7H9.9V8.1C9.9 7.60294 9.49706 7.2 9 7.2ZM9 3.6C8.25441 3.6 7.65 4.20442 7.65 4.95C7.65 5.69558 8.25441 6.3 9 6.3C9.74558 6.3 10.35 5.69558 10.35 4.95C10.35 4.20442 9.74558 3.6 9 3.6Z"
      fill="currentcolor"
    />
  </svg>
  <div
    class="Popoverstyles__Message-wdclke-1 cWyuyv"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Header-wdclke-2 fYngzS"
    >
      This is header
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    >
      Ut ut dui non ipsum pharetra aliquam id in libero. Aenean placerat leo nec ex pharetra finibus. Nunc id turpis eu risus rhoncus cursus quis efficitur sapien. Donec vitae arcu at lectus placerat fringilla.
    </div>
  </div>
</span>
`;

exports[`Hint w/ size 3`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 bfFPpw"
  tabindex="0"
>
  <svg
    class="Hintstyles__Icon-sc-1is9tx-2 gGhqTK"
    fill="none"
    height="18"
    tabindex="1"
    viewBox="0 0 18 18"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 0C13.9706 0 18 4.02944 18 9C18 13.9706 13.9706 18 9 18C4.02944 18 0 13.9706 0 9C0 4.02944 4.02944 0 9 0ZM9 7.2H7.2V9H8.1V11.7H6.3V13.5H11.7V11.7H9.9V8.1C9.9 7.60294 9.49706 7.2 9 7.2ZM9 3.6C8.25441 3.6 7.65 4.20442 7.65 4.95C7.65 5.69558 8.25441 6.3 9 6.3C9.74558 6.3 10.35 5.69558 10.35 4.95C10.35 4.20442 9.74558 3.6 9 3.6Z"
      fill="currentcolor"
    />
  </svg>
  <div
    class="Popoverstyles__Message-wdclke-1 cWyuyv"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Header-wdclke-2 fYngzS"
    >
      This is header
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    >
      Ut ut dui non ipsum pharetra aliquam id in libero. Aenean placerat leo nec ex pharetra finibus. Nunc id turpis eu risus rhoncus cursus quis efficitur sapien. Donec vitae arcu at lectus placerat fringilla.
    </div>
  </div>
</span>
`;
